# RealDiag-Software

./: .gitignore  .netlifyignore  CHANGELOG.md  CI_README.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.prebuilt  INSTALLATION_VERIFICATION.txt  LICENSE  MANIFEST.in  MEDICAL_KNOWLEDGE_STATUS.md  Makefile  OPTION3_UX_PLAN.md  PHASE3_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  RELEASE_COMMANDS.txt  RELEASE_INSTRUCTIONS.md  RELEASE_SUMMARY.txt  RealDiag_Documentation.docx  SESSION_SUMMARY_MEDICAL_EXPANSION.md  backend__Dockerfile  backend__main.py  backend__pyproject.toml  backend__services__decision_tree_engine.py  config.py  docker-compose.local.yml  docker-compose.yml  frontend__Dockerfile  frontend__app__diagnostic__page.jsx  import_medical_data.py  install.bat  install.sh  main.py  netlify.toml  pyproject.toml  render.yaml  requirements.txt  setup.py
.github/workflows/: ci.yml  e2e-netlify-diagnostic.yml  frontend-prebuild.yml  images-release-pin.yml
artifacts/: image-digest.txt
backend/: Dockerfile  main.py  pyproject.toml
backend/rules/: cardiology.yml  dermatology.yml  emergency_medicine.yml  endocrinology.yml  ent.yml  gastroenterology.yml  geriatrics.yml  hematology_oncology.yml  infectious_disease.yml  nephrology.yml  neurology.yml  obstetrics_gynecology.yml  ophthalmology.yml  orthopedics.yml  (+7 more)
diagnostics/: __init__.py  network.py  performance.py  system.py
docs/: MONITORING.md  RUNTIME_CONFIG.md
frontend/: Dockerfile  docker-entrypoint.sh  next.config.js  package-lock.json  package.json  server.js
k8s/: README.md  ingress-realdiag.yaml  staging-realdiag.yaml
monitoring/: docker-compose.yml
release-manifests/: deploy-report-1.0.12.txt  realdiag-1.0.12-manifest.txt
scripts/: ci_check_diag.py
tests/: __init__.py  test_api.py  test_e2e.py  test_hostmap.py  test_network.py  test_performance.py  test_system.py
tools/: pin-manifests.py
(+54 files in other folders)
